build/other-manually-deployed/mosquitto/staging/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mosquitto-service
  namespace: staging
spec:
  selector:
    app: mosquitto
  type: ClusterIP 
  ports:
  - name: mosquitto
    port: 1883
    targetPort: 1883
  - name: mosquitto-tls
    port: 8883
    targetPort: 8883
